# nn-back

./: .env.save  .gitignore  .gitmodules  Dockerfile  db.json  entrypoint.sh  firebase-messaging-sw.js  jet.conf  manage.py  pyproject.toml  requirements.txt  sw.js
django_rest_passwordreset/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
django_rest_passwordreset/migrations/: 0001_initial.py
firebase/: admin.py  apps.py  models.py  sdk.py  signals.py  urls.py  views.py
firebase/migrations/: 0001_initial.py
namastenepal/: asgi.py  backends.py  common.py  schema.py  settings_old.py  urls.py  views.py  wsgi.py
namastenepal/accounts/: apps.py  prevent.py  serializers.py  tokens.py  utils.py  views.py
namastenepal/channels_app/: apps.py  consumers.py  group_chat.py  notification.py  routing.py  signals.py  token_auth.py  user_channels.py
namastenepal/chat_messages/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
namastenepal/community/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
namastenepal/core/: admin.py  apps.py  views.py
namastenepal/friendship/: models.py  urls.py
namastenepal/notifications/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
namastenepal/points/: admin.py  apps.py  models.py  pointSystem.py  serializers.py  signals.py
namastenepal/posts/: abstract_models.py  admin.py  apps.py  models.py  serializers.py  signals.py  sorting.py  urls.py  views.py
namastenepal/quiz/: admin.py  apps.py  models.py
namastenepal/settings/: __init__.py  base.py  local.py  local.template.py  production.py
namastenepal/usermodule/: apps.py  (+7 more)
rest_framework_jwt/: serializers.py  views.py
rest_friendship/: serializers.py  urls.py  views.py
templates/: base.html  css.html  js.html  navbar.html  offline.html
(+30 files in other folders)
