[tool.poetry]
name = "namaste-nepal"
version = "0.1.0"
description = "social media for nepalese all around the world."
authors = ["zeph <namastebackend@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "2.2.2"
psycopg2-binary = "^2.8.6"
python-decouple = "^3.3"
jet-django = "^1.0.5"
django-jet = "^1.0.8"
django-countries = "^6.1.3"
django-storages = "^1.10.1"
django-cors-headers = "^3.5.0"
djangorestframework = "^3.12.1"
channels = "^2.4.0"
django-dbbackup = "^3.3.0"
graphene-django = "^2.13.0"
djangorestframework-jwt = "^1.11.0"
twilio = "^6.46.0"
django-extra-fields = "^3.0.2"
python-memcached = "^1.59"
channels-redis = "^3.1.0"
firebase-admin = "^4.4.0"
django-reverse-admin = "^2.9.4"
jet-bridge = "^0.9.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint-django = "^2.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
