[tool.poetry]
name = "namaste-nepal"
version = "0.1.0"
description = "social media for nepalese all around the world."
authors = ["zeph <namastebackend@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.0.2"
psycopg2-binary = "^2.9.3"
python-decouple = "^3.6"
django-admin-mazer = "^0.1.2"
django-countries = "^7.2.1"
django-storages = "^1.12.3"
django-cors-headers = "^3.11.0"
djangorestframework = "^3.13.1"
channels = "^3.0.4"
djangorestframework-simplejwt = "^5.0.0"
twilio = "^7.6.0"
drf-extra-fields = "^3.2.1"
python-memcached = "^1.59"
channels-redis = "^3.3.1"
firebase-admin = "^5.2.0"
django-reverse-admin = "^2.9.6"
Pillow = "^9.0.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pylint-django = "^2.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
